--- a/Report/unswthesis-2.0/conclusion.tex
+++ b/Report/unswthesis-2.0/conclusion.tex
@@ -1,15 +1,11 @@
 \chapter{Conclusion}\label{ch:conclusion}
 
-\begin{itemize}
-\item Summarize what we have so far??
-\end{itemize}
+A plethora of research has already been conducted into general ranking algorithms for SNS feeds. We successfully aggregated and implemented common algorithms proposed in the literature by Aga~\cite{Aga2014}, Li~\cite{LiTiaLee2010} and Szo~\cite{szomszor2008semantic} as a basis to our ranking algorithm and on top of that incorporated the results of our user modelling to enable a more personal factor to the algorithm.
 
-Users are not capable of understanding what type of user that they are. This means that the results that we have achieved may not be reliable enough to measure the performance of our algorithm. 
+As discussed in the evaluation section, it proved to be quite difficult for users to determine what type of posts they prefer, let alone generalise their preferences to certain user types. This makes it very difficult for us to confirm how effective our algorithm is exactly. Some suggestions in regard to this are proposed in the future work section.
 
 \section{Future Work}
  
-Our algorithm only contains a few user types, these user types could be expanded into more specific categories. There could also be more work dedicated to making the user understand each user type so they they will be able to correctly select their user type that best defines themselves.
+Our algorithm only contains a few user types, these user types could be refined into more specific categories thus accommodating a larger variety of users, but doing so would require more justification via surveying. There could also be more work dedicated to making the user understand each user type, for example providing examples of typical posts that may be scored highly for each user type. This will allow the user to more easily and correctly select the user type that best defines themselves. 
 
-\begin{itemize}
-\item Possible stuff to extend our thesis
-\end{itemize}
+And most importantly, the solution that this paper proposes would best be used as a framework to implement similar ranking algorithms across other SNS and further, more extensive and large-scale evaluation should be performed if such an algorithm was to be seriously considered for use within these SNS.
