--- a/Report/unswthesis-2.0/conclusion.tex
+++ b/Report/unswthesis-2.0/conclusion.tex
@@ -8,4 +8,4 @@ As discussed in the evaluation section, it proved to be quite difficult for user
  
 Our algorithm only contains a few user types, these user types could be refined into more specific categories thus accommodating a larger variety of users, but doing so would require more justification via surveying. There could also be more work dedicated to making the user understand each user type, for example providing examples of typical posts that may be scored highly for each user type. This will allow the user to more easily and correctly select the user type that best defines themselves. 
 
-And most importantly, the solution that this paper proposes would best be used as a framework to implement similar ranking algorithms across other SNS and further, more extensive and large-scale evaluation should be performed if such an algorithm was to be seriously considered for use within these SNS.
+And most importantly, the solution that this thesis proposes would best be used as a framework to implement similar ranking algorithms across other SNS and further, more extensive and large-scale evaluation should be performed if such an algorithm was to be seriously considered for use within these SNS.
