--- a/Report/unswthesis-2.0/introduction.tex
+++ b/Report/unswthesis-2.0/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}\label{ch:intro}
 
-Social Networking Services (SNS) are platforms in which a diverse range of users are able share their interests, organise social activities and keep in touch with people. In almost all SNS, users are presented with a \textit{feed}; this feed is a list of items generated via the user's connections throughout the SNS. The feed acts as a summary of activities that the user has subscribed to, a dashboard presented to them when they first log in. This feed contains a large amount of items that we would like to order, or rank in some way such that the items that the user finds more interesting have a higher precedence in the feed. As the use of SNS grows rapidly, so does the demand for such ranking algorithms.
+Social Networking Services (SNS) are platforms in which a diverse range of users are able to share their interests, organise social activities and keep in touch with people. In almost all SNS, users are presented with a \textit{feed}; this feed is a list of items generated via the user's connections throughout the SNS. The feed acts as a summary of activities that the user has subscribed to; a dashboard presented to them when they first log in. This feed contains a large amount of items that need to be ordered/ranked in some way such that the items the user finds more interesting would appear first in the feed. As the use of SNS grows rapidly, so does the demand for such ranking algorithms.
 
 While there exists many SNS currently being used, the scope of this thesis will be reduced to focus on only one of them; Facebook. This is mainly due to the time constraints involved, however the results and methodology used in both our research and implementation will be generalisable to all SNS. There are two main reasons why Facebook has been chosen as our SNS of focus.
 
