--- a/Report/unswthesis-2.0/abstract.tex
+++ b/Report/unswthesis-2.0/abstract.tex
@@ -1,2 +1,2 @@
 \chapter*{Abstract}\label{abstract}
-The universally used platform of Social Networking Services (SNS) faces many challenges as they gain huge user bases. One such SNS known as Facebook provides a feed that is a list of all items from friends, organisations and other entities. This feed contains an enormous amount of data that must be ordered in such a way that the user is satisfied. In this paper we will be exploring the possibilities of user modelling being used to rank these feed items as well as verifying multiple proposed algorithms in the literature. The final outcome is a more personalised algorithm for ranking items from a user’s Facebook feed.
+The universally used platform of Social Networking Services (SNS) faces many challenges as they gain huge user bases. One such SNS known as Facebook provides a feed that is a list of all items from friends, organisations and other entities. This feed contains an enormous amount of data that must be ordered in such a way that the user is satisfied. In this thesis, we will be exploring the possibilities of user modelling being used to rank these feed items as well as verifying multiple proposed algorithms in the literature. The final outcome is a more personalised algorithm for ranking items from a user’s Facebook feed.
