--- a/Report/unswthesis-2.0/background.tex
+++ b/Report/unswthesis-2.0/background.tex
@@ -6,9 +6,9 @@
 
 \section{User Modelling}
 
-As mentioned earlier, the first half of our approach is to identify different types of Facebook users and determine what preferences they have in terms of feed items. We took a look to the literature to see if anyone had attempted user modelling for this purpose.
+As mentioned earlier, the first half of our approach is to identify different types of Facebook users and determine what preferences they have in terms of feed items. We looked into the literature to see if anyone had attempted user modelling for this purpose.
 
-The first question we set out to answer was quite intuitive, that being; what are the reasons why people use Facebook? Or even SNS in general. Bon~\cite{bonds2010myspace} conducted a survey on university students to confirm the results of a research paper published in 2008 which found that the main reasons people used social networks were:
+The first question we set out to answer was quite intuitive, that being; what are the reasons people use Facebook? Or even SNS in general. Bon~\cite{bonds2010myspace} conducted a survey on university students to confirm the results of a research paper published in 2008 which found that the main reasons people used social networks were:
 
 \begin{itemize}
 \item Keeping in touch with friends
@@ -16,7 +16,7 @@ The first question we set out to answer was quite intuitive, that being; what ar
 \item Posting and looking at pictures
 \end{itemize}
 
-Factor analysis was performed on the survey answers and the results were tabulated into a list of loadings, representing how much certain features acted as the reason for the use of social networks. These results however, proved to be too general for our purposes as we are looking to define different, more concrete user types. On top of this, the scope of this Survey was restricted only to university students and contained a relatively small sample size of 200.
+Factor analysis was performed on the survey answers and the results were tabulated into a list of loadings, representing how much certain features acted as the reason for the use of social networks. These results however, proved to be too general for our purposes as we are looking to define different, more concrete user types. On top of this, the scope of this survey was restricted only to university students and contained a relatively small sample size of 200.
 
 \begin{center}
 \includegraphics[scale=0.6]{images/factoranalysis.jpg}
@@ -33,9 +33,9 @@ Nad~\cite{nadkarni2012people} published a literature review which looked at user
 \item Users with significantly high or low levels of neuroticism tend to be more open to share personal information on their profiles
 \end{itemize}
 
-These findings are closer to what we are looking for, however, it is not easy to determine the psychology of a user for the application of ranking their Facebook feed. However, once again, these results allow us to get a better idea of the different types of feed objects that are to be considered, for example text vs images.
+These findings are closer to what we are looking for, however, it is not easy to determine the psychology of a user for the application of ranking their Facebook feed. Nonetheless, once again, these results allow us to get a better idea of the different types of feed objects that are to be considered, for example text vs images.
 
-It eventually became clear to us that even if we were to use these results for our user modelling, it is uncertain whether they are still relevant, as we saw, the survey conducted by Bon~\cite{bonds2010myspace} set out to confirm results from a study just 2 years previous to his research paper and already found that user's behaviour changed. So we began to look at how people perform user modelling and the practices involved with it. Cle~\cite{clemmensen2004four} conducted an interview with 4 different HCI professionals based in Sweden to gain insight into their methodologies and philosophies. The following methods of performing user modelling that came from the interviews especially interested us and will most likely be used throughout our implementation:
+It eventually became clear to us that even if we were to use these results for our user modelling, it is uncertain whether they are still relevant, as we saw, the survey conducted by Bon~\cite{bonds2010myspace} set out to confirm results from a study just 2 years previous to his research paper and already found that user's behaviour changed. So we began to look at how people perform user modelling and the practices involved with it. Cle~\cite{clemmensen2004four} conducted an interview with 4 different HCI professionals based in Sweden to gain insight into their methodologies and philosophies. The following methods of performing user modelling that came from the interviews especially interested us and were used throughout our implementation:
 
 \begin{itemize}
 \item Usability Tests - Observing how a user interacts with a system and asking good questions to extract meaningful feedback from the user.
@@ -55,9 +55,9 @@ A ranking algorithm will give each item a score and order them with the item wit
 \item Social Influence
 \end{itemize}
 
-Topical reference is the idea that most users are interested in a limited range of topics. Topological locality refers to the fact that users are interested in the topics that their friends like and Social influence basically says that users are interested in famous people such as singers or actors. These factors do provide some insight on what a user likes but could be further generalised to topics that a user likes. The Topological locality does raise an interesting notion, that is, users are more likely to like a feed item that a friend likes. We can summarize these two into a more general categorization of Topic classification and connections. Topic classification will be classifying the topics that a user may like while connections will be a measure of how 'close' the user is with their friend based on their interactivity.
+Topical reference is the idea that most users are interested in a limited range of topics. Topological locality refers to the fact that users are interested in the topics that their friends like, and Social influence basically says that users are interested in famous people such as singers or actors. The Topological locality does raise an interesting notion, that is, users are more likely to like a feed item that a friend likes. We can summarize these two into a more general categorization of Topic classification and connections. Topic classification will be classifying the topics that a user may like while connections will be a measure of how 'close' the user is with their friend based on their interactivity.
 
-Topic classification is quite difficult we have to generalise a topic that they may like based on the feed items that they receive. In a paper by Bur~\cite{Bur2013}, they analysed twitter tweets and tried to generalise a topic based on the tweets each user received. They have analysed two types of methods. They are:
+Topic classification is quite difficult as we have to generalise a topic that they may like based on the feed items that they receive. In a paper by Bur~\cite{Bur2013}, they analysed twitter tweets and tried to generalise a topic based on the tweets each user received. They have analysed two types of methods. They are:
 \begin{itemize}
 \item BestOverlap
 \item UserInfoBigram
@@ -67,7 +67,7 @@ The BestOverlap method attempts to gather a huge amount of tweets and look at th
 
 The UserInfoBigram analyses the optional text that is provided in every tweet and generalises a topic from those words. In Facebook, almost no one uses the optional text so this method will also not work.
 
-In order to do topic classification we looked to a paper by Szo~\cite{szomszor2008semantic} who proposed a system for defining topics of interest with the aid of Wikipedia. He collated a list of tags using a user's "tagging activity" which, for our purposes could mean commonly used words in past feed items. These tags are then verified using Wikipedia to check that there indeed does exist something along the lines of the tag. Wikipedia is chosen over more formal dictionaries due the the nature of social media tags not being real words, thus many of the tags will not be able to be verified by formal dictionaries such as WordNet. Wikipedia is then traversed (from the tag's wiki page) to find a super category that the tag belongs to. For example if a user generates the tag "C++", in Wikipedia, the C++ page is a subpage of the "Programming Language Families" page.
+In order to do topic classification we looked to a paper by Szo~\cite{szomszor2008semantic} who proposed a system for defining topics of interest with the aid of Wikipedia. He collated a list of tags using a user's '"'tagging activity" which, for our purposes could mean commonly used words in past feed items. These tags are then verified using Wikipedia to check that there indeed exists something along the lines of the tag. Wikipedia is chosen over more formal dictionaries due the the nature of social media tags not being real words, thus many of the tags will not be able to be verified by formal dictionaries such as WordNet. Wikipedia is then traversed (from the tag's wiki page) to find a super category that the tag belongs to. For example if a user generates the tag "C++", in Wikipedia, the C++ page is a subpage of the "Programming Language Families" page.
 
 Since a single verified tag can have many categories and the final list ends up being dominated by the broader categories, only categories that meet either of these criteria are taken:
 \begin{itemize}
@@ -78,7 +78,7 @@ Since a single verified tag can have many categories and the final list ends up 
 
 This approach nets us a list of the user's general interests, which can then be used to determine how much a certain feed item is related to the user's interests by observing the contents of the feed item and determining if they belong to any of these topics, again using Wikipedia.
 
-Aga~\cite{Aga2014} discusses activity ranking for LinkedIn which is also a Social Networking Service. They discover two more factors that have a huge impact on whether the activity is deemed interesting or not. They used the measurement of CTR or click-through-rate which is the probability of a user clicking on the link to measure the appeal of an activity. An activity that was old had a low CTR compared to an activity that was new. It seems that the freshness of an activity or the time that the activity was made had to be taken into account in the ranking algorithm. In the graph below, we see a drop in the CTR as time progresses.
+Aga~\cite{Aga2014} discusses activity ranking for LinkedIn which is also a Social Networking Service. They discover two more factors that have a huge impact on whether the activity is deemed interesting or not. They used the measurement of CTR(Click-Through-Rate) which is the probability of a user clicking on the link to measure the appeal of an activity. An activity that was old had a low CTR compared to an activity that was new. It seems that the freshness of an activity or the time that the activity was made had to be taken into account in the ranking algorithm. In the graph below, we see a drop in the CTR as time progresses.
 
 \begin{center}
 \includegraphics[scale=0.8]{images/freshness.jpg}
